# MarketFlow

./: .gitignore  .mise.toml  AGENTS.md  README.md  STRUCTURE.yml  package-lock.json  package.json
.agents/plugins/: marketplace.json
.githooks/: post-commit
.skills/: TEMPLATE.md  add-new-index.md  architecture.md  deploy.md  install-hooks.sh  maintain-skills.md  quant-module.md  refresh-skills.sh
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts
backend/src/indices/: fetcher.ts  indices.controller.ts  indices.module.ts  indices.service.ts
backend/src/quant/: quant.controller.ts  quant.module.ts  quant.service.ts
backend/src/websocket/: adapter.ts  events.service.ts  indices.gateway.ts  websocket.module.ts
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: IndexCard.tsx  IndexDetailModal.tsx
plugins/marketflow-workflows/.codex-plugin/: plugin.json
plugins/marketflow-workflows/skills/add-new-index/: SKILL.md
plugins/marketflow-workflows/skills/deploy-marketflow/: SKILL.md
plugins/marketflow-workflows/skills/maintain-skills/: SKILL.md
plugins/marketflow-workflows/skills/marketflow-architecture/: SKILL.md
plugins/marketflow-workflows/skills/quant-module/: SKILL.md
quant/: app.py  pyproject.toml
rust-backend/: Cargo.toml  README.md
rust-backend/src/: fetcher.rs  lib.rs  main.rs  server.rs
src/: fetcher.js  index.js
src/public/: index.html
