[project]
name = "marketflow-quant"
version = "0.1.0"
description = "Python quantitative analysis service for MarketFlow."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "numpy==2.2.1",
  "pandas==2.2.3",
  "pydantic==2.10.4",
  "uvicorn[standard]==0.34.0",
]

[tool.uv]
package = false
