[package]
name = "marketflow-rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socketioxide = { version = "0.18", features = ["state"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
